--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 
 html,
 body {
+  height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -21,6 +22,11 @@ a {
   text-decoration: none;
 }
 
+.feed {
+  height: 100%;
+  padding: 25px 10px;
+  box-sizing: border-box;
+}
 .btn {
   background-color: #28a745;
   font-size: 16px;
