--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -10,6 +10,13 @@
   box-shadow: 0px 5px 12px 0px rgba(255, 255, 255, 0.2);
 }
 
+.theme {
+  margin-right: 15px;
+}
+.theme:hover {
+  cursor: pointer;
+}
+
 .left {
   display: flex;
   align-items: center;
@@ -20,4 +27,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.logout:hover {
+  cursor: pointer;
 }
